Finalização dos primeiros cursos

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>
-            Começando hoje o rush alura e ver <strong>
-                o quanto consigo aprender e criar coisas em 30 dias.
-            </strong>
-        </h1>
-        <p>
-            Iae! Me chamo Gui, desenvolvedor Front-End com especialidade em React, HTML e CSS. Por enquanto apenas me ajudo a colocar em prática boas ideias. Vejam meus trabalhos!
-        </p>
-        <a href="https://github.com/GuiCPessoa"> GitHub</a>
-        <a href="https://www.behance.net/guipessoa"> Behance</a>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">
+                Começando hoje o rush alura e ver <strong class="titulo-destaque">
+                    o quanto consigo aprender e criar coisas em 30 dias.
+                </strong>
+            </h1>
+            <p apresentacao__conteudo__paragrafo>
+                Iae! Me chamo Gui, desenvolvedor Front-End com especialidade em <strong class="titulo-destaque">React, HTML e CSS.</strong> Por enquanto apenas me ajudo a colocar em prática boas ideias. Vejam meus trabalhos!
+            </p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__botao" href="https://github.com/GuiCPessoa"> GitHub</a>
+                <a class="apresentacao__links__botao" href="https://www.behance.net/guipessoa"> Behance</a>
+            </div>
+    </section>
         
-        <img src="/Imagens/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
+        <img class="apresentacao__imagem" src="/HTML e CSS - Alura/Imagens/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
     </main>
     <footer></footer>
 </body>
