atualizações do projeto e aprendendo mais

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                 Iae! Me chamo Gui, desenvolvedor Front-End com especialidade em <strong class="titulo-destaque">React, HTML e CSS.</strong> Por enquanto apenas me ajudo a colocar em prática boas ideias. Vejam meus trabalhos!
             </p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__botao" href="https://github.com/GuiCPessoa"> GitHub</a>
-                <a class="apresentacao__links__botao" href="https://www.behance.net/guipessoa"> Behance</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+                <a class="apresentacao__links__botao" href="https://github.com/GuiCPessoa"> <img src="./assets/github.png"> GitHub</a>
+                <a class="apresentacao__links__botao" href="https://www.behance.net/guipessoa"> <img src="./assets/behance.png">
+                    Behance</a>
+                <a class="apresentacao__links__botao" href="https://www.instagram.com/gui.cpessoa/"> <img src="./assets/instagram.png" >
+                    Instagram</a>
             </div>
     </section>
         
-        <img class="apresentacao__imagem" src="/HTML e CSS - Alura/Imagens/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
+        <img class="apresentacao__imagem" src="/assets/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
     </main>
     <footer></footer>
 </body>
