--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rush Alura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/HTML e CSS - Alura/styles/style.css">
+    
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho_menu">
+            <a class="cabecalho_menu_link"href="index.html"> Home</a>
+            <a class="cabecalho_menu_link"href="about.html"> Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
@@ -28,8 +34,10 @@
             </div>
     </section>
         
-        <img class="apresentacao__imagem" src="/assets/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
+        <img class="apresentacao__imagem" src="/HTML e CSS - Alura/assets/IMG_3233.jpg" alt="Fotografia Gui Pessoa">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Gui Pessoa.</p>
+    </footer>
 </body>
 </html>
